--- a/locales/es/translationEs.json
+++ b/locales/es/translationEs.json
@@ -16,7 +16,7 @@
     "Subject":"Asunto",
     "<Contacto />":"<Contacto />",
     "Hola! Soy":"Hola! Soy",
-    "Soy un desarrollador web full stack":"Soy un desarrollador web full stack",
+    "Soy un desarrollador web full stack":"Full Stack Web Developer",
     "mecanuDescription": "Pasantía en el equipo en el desarrollo de la web app de esta innovadora startup chilena que brinda servicios de mecánica a domicilio. La aplicación permite a los usuarios registrarse, seleccionar servicios para sus vehículos y recibir una cotización instantánea. Como desarrollador 'full stack', desempeñé un papel dinámico, participando tanto en el front-end como en el back-end, utilizando metodologías ágiles y tecnologías como Next.js, Tailwind, Express, Postgresql, Sequelize, Firebase, Mercado Pago y Sendgrid. También implementé la funcionalidad de Progressive Web App (PWA).",
     "Tecnologias":"Tecnologías",
     "netflixDescription":"Trabajo de frontend imitando el conocido servicio de streaming. Permite visualizar tarjetas de peliculas de la API de IMDB, permitiendo crear perfiles de usuario y guardar sus películas favoritas. Para la  autenticación se utilizó FIREBASE y para la base de datos, FIRESTORE.",
