fix projects in nav

--- a/locales/en/translationEn.json
+++ b/locales/en/translationEn.json
@@ -4,6 +4,7 @@
   "Conecta": "Connect",
   "Skills": "Skills",
   "<Proyectos />": "<Projects />",
+  "Proyectos":"Projects",
   "Contacto": "Contact me",
   "Inicio": "Home",
   "Mis redes": "My networks",
