--- a/locales/es/translationEs.json
+++ b/locales/es/translationEs.json
@@ -25,6 +25,7 @@
     "portfolioDescription": "Portfolio full responsive realizado en Next Js y Tailwind",
     "openvinoDescription": "La aplicación consiste en un dashboard para las bodegas, que permite administrar los redeems (canjes) de tokens, y una vista de administrador para gestionar la información de todas las bodegas desde un perfil de superusuario. Cuenta además con autenticación con Metamask, desarrollo de un microservicio en express que para manejar las notificciones provinientes de otro servicio de Openvino, conectado al dashboard mediante web socket.",
     "callToAction": "Tu proyecto comienza hoy",
-    "callToAction2": "¡Conecta!"
+    "callToAction2": "¡Conecta!",
+    "enviado":"Mensaje enviado"
 
 }
